# audio-server

./: .gitignore  CMakeLists.txt
doc/: config  generate.sh
doc/architecture/: arch-draft.md
doc/images/: classes.dia
output/: dummy.txt
source/: CMakeLists.txt  conftest.py  core.cpp  core.h  generator.cpp  generator.h  location.cpp  location.h  main.cpp  output.cpp  output.h  processor.cpp  processor.h  sound_buffer.cpp  sound_buffer.h  temp.cpp  temp.h  wav_file.cpp  wav_file.h  wav_header.h
source/bindings/: CMakeLists.txt  __init__.py  corelib.py  coretypes.py  cshim.cpp  cshim.h  enums.py
source/core/: CMakeLists.txt  core.cpp  core.h  location.h  sound_buffer.cpp  sound_buffer.h  wav_file.cpp  wav_file.h
source/core/generator/: CMakeLists.txt  base.cpp  base.h  generator.h  noise.cpp  noise.h  primitive.cpp  primitive.h  script.cpp  script.h  test.cpp  test.h  wave.cpp  wave.h
source/core/output/: CMakeLists.txt  alsa.cpp  alsa.h  base.cpp  base.h  file.cpp  file.h  memory.cpp  memory.h  output.h
source/core/processor/: CMakeLists.txt  acousticave.cpp  acousticave.h  base.cpp  base.h  distance_attenuation.cpp  distance_attenuation.h  no_operation.cpp  no_operation.h  processor.h
source/examples/: alsa_output.py  wave_server.py
source/generator/: generator.cpp  generator.h  generator_primitive.cpp  generator_primitive.h  generator_script.cpp  generator_script.h  generator_test.cpp  generator_test.h  generator_wave.cpp  generator_wave.h  primitive.cpp  primitive.h  script.h  test.cpp  test.h  wave.cpp  wave.h
source/output/: alsa.cpp  alsa.h  file.h  memory.cpp  memory.h  output.h
source/processor/: acousticave.cpp  acousticave.h  distance_attenuation.cpp  distance_attenuation.h  no_operation.cpp  processor.cpp  processor.h  processor_acousticave.cpp  processor_distance_attenuation.cpp  processor_distance_attenuation.h  processor_nooperation.cpp  processor_nooperation.h
source/tests/: test_acousticave.py  test_core.py  test_distance_attenuation.py  test_generator.py  test_output.py
